fix overlap of add activity button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1240,3 +1240,6 @@ div#myactivity-text p {
   font-size: 40px;
   font-weight: bold;
 }
+div#activities, div#add-activity {
+  clear: both;
+}
